# notification-system

./: README.md  alerts.db  app.py  main.py  pyproject.toml  tasks.py
app/: __init__.py  database.py  dependencies.py  helpers.py  main.py  models.py  schemas.py
app/routers/: admin.py  analytics.py  user.py
static/: index.html  user.html
